Added Carousel of images Changed font Added support email to FAQ

--- a/src/input.css
+++ b/src/input.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer base{
-    html{
-        font-family: Helvetica;
+    body{
+        font-family: 'Poppins', sans-serif;
     }
 }
